@@ -33,6 +33,7 @@ docs_markup         = mmd       ; default
 update_sources = 0
 
 [JSAN::Bundle]					; after docs generation to avoid docs for bundles
+roots_only_for_release  = 0
 
 [JSAN::NPM]                     
 main = lib/Task/Joose/Core
