@@ -15,13 +15,17 @@ You can install Joose from the following sources:
 1. INSTALLING FROM TARBALL
 ==========================
 
-The latest released tarball is available for downloading either from <http://nodul.es/modules/joose> or from <http://npm.mape.me/> (search for package 'joose').
+The latest released tarball is available for downloading from <http://search.npmjs.org/#/joose>. Alternative locations: <http://nodul.es/modules/joose> and <http://npm.mape.me/> (search for package 'joose').
 
 
 Source files to include
 -----------------------
 
 To use Joose include the following source file in your project (from the root of the tarball)
+
+    task-joose-core.js
+    
+or from another location:
 
     lib/Task/Joose/Core.js
 
@@ -88,7 +92,7 @@ Typically its `/usr/local/lib/node`. So, to do that, add this line to your `~/.b
 
 Configure you local web server that way, that the url `http://localhost/jsan` will point to the `/usr/local/lib/node/.jsan` (the directory from previous step).
 
-After this setup, you can either require the browser-related code from NodeJS (it uses CamelCase for modules names as a convention):
+After theis setup, you can either require the browser-related code from NodeJS (it uses CamelCase for modules names as a convention):
 
     require('Useful/Module')
     
